Fix drag handle not showing Only allow drag via handle Add placeholder to pre-build command inputs

--- a/src/VoltProjects.Client/src/scss/components/admin.scss
+++ b/src/VoltProjects.Client/src/scss/components/admin.scss
@@ -35,6 +35,6 @@
     margin-left: 230px;
 }
 
-.admin-dragable {
+.admin-dragable-handle {
     cursor: grab;
 }
